--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,31 @@ h1 {
     font-size: 2.5em;
     margin-inline: auto;
     text-align: center;
-    
+    background-color: red;
+    padding:1em 0;
+    margin-top: 0;
+    color: white;
+    font-family: sans-serif;
+}
+
+.cardContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
+}
+
+.card {
+    background: #ff000025;
+    padding: 0.5em 1em;
+    border-radius: 12px;
+    border: 1px solid black;
+    transition: 300ms;
+    opacity: 0;
+    font-size: 2rem;
+}
+
+.card.show {
+    transform: translateX(0);
+    opacity: 1;
 }
