--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,18 @@ h1 {
     align-items: center;
 }
 
+.duoContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
+}
+
 .card:first-of-type{
-    background-color: green;
+    background-color: #a1cba1;
 }
 
 .card:last-of-type{
-    background-color: blue;
+    background-color: #9494f5;
 }
 
 .card {
